kubernetes-templating/frontend/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: front-end
  labels:
    name: front-end
spec:
  ports:
  - port: 80
    targetPort: 8079
  selector:
    name: front-end
