kubernetes-templating/frontend/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: front-end
  annotations:
    certmanager.k8s.io/acme-challenge-type: http01
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: front-end
spec:
  rules:
  - host: socks-shop.labash.ru
    http:
      paths:
      - path: /
        backend:
          serviceName: front-end
          servicePort: 80
